# code2seq

./: .env  .gitignore  Input.java  README.md  _code2seq.py  code2seq.py  common.py  config.py  extractor.py  flask_app.py  flask_wrapper.py  gpu_checker.py  interactive_predict.py  model.py  model_tf2.py  preprocess.sh  pyproject.toml  reader.py  reader_tf2.py  test_pathcontext.py  train.bat  train.sh
.cursor/rules/: coding-rule.mdc
JavaExtractor/: extract.py
JavaExtractor/JPredict/: .classpath  .gitignore  dependency-reduced-pom.xml  pom.xml
JavaExtractor/JPredict/src/main/java/JavaExtractor/: FeatureExtractor.java
JavaExtractor/JPredict/src/main/java/JavaExtractor/FeaturesEntities/: ProgramFeatures.java  ProgramRelation.java
data/: code.py  method.py  path_context.py  predict_name.py
docs/: development_session_2025-06-08.md  vector_generation_system.md
tests/: README.md  test_context_model_fix.py  test_dict_access_analysis.py  test_dict_conversion_fix.py  test_flask_app.py  test_type_conversion_tracking.py  test_vector_types.py
