[project]
name = "code2seq"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "absl-py==2.1.0",
    "astor==0.8.1",
    "gast==0.2.2",
    "google-pasta==0.2.0",
    "grpcio==1.62.2",
    "h5py==2.10.0",
    "keras==2.11.0",
    "keras-applications==1.0.8",
    "keras-preprocessing==1.1.2",
    "markdown==3.4.4",
    "markupsafe==2.1.5",
    "networkx==2.6.3",
    "numpy==1.18.5",
    "packaging==24.0",
    "protobuf==3.20",
    "rouge==1.0.1",
    "setuptools==68.0.0",
    "tensorboard==1.15.0",
    "tensorflow==1.15.5",
    "tensorflow-addons==0.19.0",
    "tensorflow-estimator==1.15.1",
    "termcolor==2.3.0",
    "tqdm==4.66.4",
    "typeguard==4.1.2",
    "typing-extensions==4.7.1",
    "werkzeug==2.2.3",
    "wrapt==1.16.0",
    "zipp==3.15.0",
    "requests>=2.31.0",
    "ruff>=0.5.7",
]
readme = "README.md"
requires-python = "== 3.7.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code2seq"]

# [tool.mypy]
# strict = true

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
]
